<resources>
    <string name="app_name">Meal Planner</string>
    <string name="title_add_dish">Add Dish</string>
    <string name="title_add_ingredient">Add Ingredient</string>
    <string name="title_dish_detail">Dish Detail</string>
    <string name="title_home">Home</string>
    <string name="title_dishes">Dishes</string>
    <string name="title_pantry">Pantry</string>
    <string name="title_search_dish">Search Dish</string>
    <string name="title_result">Result</string>

    <string name="ingredient">Ingredient</string>
    <string name="status">Status</string>

    <string name="button_generate">Generate</string>
    <string name="pantry_only">Use the ingredients in your pantry only</string>
    <string name="button_add">Add</string>
    <string name="no_ingredient_name">Please enter an ingredient name</string>
    <string name="no_dish_name">Please enter an dish name</string>
    <string name="no_dish_type">Please select at least one dish type</string>
    <string name="search_hint">Search by dish name</string>
    <string name="api_fail">API request failed</string>
    <string name="camera_fail">Open camera failed</string>

    <string name="button_add_customize">Custimize dish</string>
    <string name="button_search_on_browser">Browser Search</string>
    <string name="button_search">Search</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit_image">Edit Image</string>
    <string name="button_edit">Edit</string>
    <string name="button_save">Save</string>
    <string name="button_regenerate">Regenerate</string>

    <string name="ingredient_name">Ingredient name</string>
    <string name="dish_name">Dish name</string>

    <string name="type">Type: </string>
    <string name="meal">Meal: </string>
    <string name="ingredient_exist">Ingredient In Pantry</string>
    <string name="ingredient_not_exist">Ingredient Not In Pantry</string>
    <string name="or">Or</string>
    <string name="and">and</string>


    <string name="vegetable">Vegetable</string>
    <string name="meat">Meat</string>
    <string name="seafood">Seafood</string>
    <string name="staple">Staple</string>
    <string name="drink">Drink</string>
    <string name="dessert">Dessert</string>
    <string name="fruit">Fruit</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="regular">Regular</string>
    <string name="low">Low</string>
    <string name="none">None</string>
    <string name="nonexistent">Not in the Pantry</string>

    <string-array name="count">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="meal_type">
        <item>@string/breakfast</item>
        <item>@string/lunch</item>
        <item>@string/dinner</item>
        <item>@string/dessert</item>
    </string-array>

    <string-array name="dish_type">
        <item>@string/vegetable</item>
        <item>@string/meat</item>
        <item>@string/seafood</item>
        <item>@string/staple</item>
        <item>@string/drink</item>
        <item>@string/dessert</item>
        <item>@string/fruit</item>
    </string-array>

    <string-array name="status">
        <item>@string/regular</item>
        <item>@string/low</item>
        <item>@string/none</item>
    </string-array>



    <string-array name="meal_type_database">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Dessert</item>
    </string-array>

    <string-array name="dish_type_database">
        <item>Vegetable</item>
        <item>Meat</item>
        <item>Seafood</item>
        <item>Staple</item>
        <item>Drink</item>
        <item>Dessert</item>
        <item>Fruit</item>
    </string-array>

    <string-array name="status_database">
        <item>Regular</item>
        <item>Low</item>
        <item>None</item>
    </string-array>
</resources>